--- a/package.json
+++ b/package.json
@@ -20,16 +20,19 @@
     "@tailwindcss/vite": "^4.1.11",
     "@vueuse/core": "^13.5.0",
     "@vueuse/motion": "^3.0.3",
+    "aos": "^2.3.4",
     "clsx": "^2.1.1",
     "lenis": "^1.3.5",
     "lucide-vue-next": "^0.525.0",
     "pinia": "^3.0.3",
+    "sharp": "^0.34.3",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
+    "@types/aos": "^3.0.7",
     "@types/node": "^22.15.32",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/tsconfig": "^0.7.0",
@@ -37,6 +40,7 @@
     "prettier": "3.5.3",
     "typescript": "~5.8.0",
     "vite": "^7.0.0",
+    "vite-imagetools": "^7.1.0",
     "vite-plugin-vue-devtools": "^7.7.7",
     "vue-tsc": "^2.2.10"
   }
